istio-teaching/serviceentries/endpoints/dr-mongodb.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mymongodb
spec:
  host: mymongodb.demo
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
