istio-teaching/serviceentries/endpoints/se-details-serviceaccount.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: details-se
spec:
  hosts:
  - details.bookinfo.com
  location: MESH_INTERNAL
  ports:
  - number: 9080
    name: http
    protocol: HTTP
  resolution: STATIC
  endpoints:
  - address: 172.20.0.133
    serviceAccount: mongov1
