istio-teaching/serviceentries/endpoints/se-mongodb-endpoint-ports.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: mongodb-se
spec:
  hosts:
  - mymongodb.demo 
  addresses:
  - "192.168.229.158/32"
  ports:
  - number: 27019
    name: mongodb
    protocol: MONGO
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: 192.168.229.134
    ports:
      mongodb: 27017
  - address: 192.168.229.135
    ports:
      mongodb: 27017
