istio-teaching/serviceentries/endpoints/vs-mongodb-locality.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-mongodb
spec:
  hosts:
  - "mymongodb.demo"
  tcp:
  - route:
    - destination:
        host: mymongodb.demo
